--- a/KnockedDown/pom.xml
+++ b/KnockedDown/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.windskull</groupId>
-  <artifactId>KnokedDown</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <artifactId>KnockedDown</artifactId>
+  <version>1.0.0</version>
   
 <repositories>
     <!-- This adds the Spigot Maven repository to the build -->
