--- a/KnockedDown/src/main/resource/plugin.yml
+++ b/KnockedDown/src/main/resource/plugin.yml
@@ -1,5 +1,5 @@
 name: KnockedDown
-version: 0.1
+version: ${project.version}
 api-version: 1.16
 main: com.windskull.KnockedDown.KnockedDownCore
 autors: [WindSkull]
